# pre-commit-hooks

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CHANGELOG.md  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
pre_commit_hooks/: check_jsonschema.py
tests/: check_jsonschema_test.py
