[bumpversion]
current_version = 0.0.0
commit = True
tag = True

[metadata]
description-file = README.md
license-file = LICENSE

[bumpversion:file:README.md]
search = message=v{current_version}
replace = message=v{new_version}

[bumpversion:file:pre_commit_hooks/__version__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
